fl_dll/library.h

extern int cstringLength(const char* string);
extern char* mallocString(const char* origString);
extern double* mallocDoubles(int count);
extern void freeMemory(void *memory);
extern void readPointer(long long *val, long long set);
extern long long getPointer(long long *val, long long set);
extern int fillChars(char* fillThis, int sizemax);
extern int passChars(char* fillThis, int sizemax);