src/test/java/jpassport/test/extracted/library_h.java


    private static class cstringLength {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_INT,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("cstringLength");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int cstringLength(const char *string)
     * }
     */
    public static FunctionDescriptor cstringLength$descriptor() {
        return cstringLength.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int cstringLength(const char *string)
     * }
     */
    public static MethodHandle cstringLength$handle() {
        return cstringLength.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int cstringLength(const char *string)
     * }
     */
    public static MemorySegment cstringLength$address() {
        return cstringLength.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int cstringLength(const char *string)
     * }
     */
    public static int cstringLength(MemorySegment string) {
        var mh$ = cstringLength.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cstringLength", string);
            }
            return (int)mh$.invokeExact(string);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mallocString {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_POINTER,
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("mallocString");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern char *mallocString(const char *origString)
     * }
     */
    public static FunctionDescriptor mallocString$descriptor() {
        return mallocString.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern char *mallocString(const char *origString)
     * }
     */
    public static MethodHandle mallocString$handle() {
        return mallocString.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern char *mallocString(const char *origString)
     * }
     */
    public static MemorySegment mallocString$address() {
        return mallocString.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern char *mallocString(const char *origString)
     * }
     */
    public static MemorySegment mallocString(MemorySegment origString) {
        var mh$ = mallocString.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mallocString", origString);
            }
            return (MemorySegment)mh$.invokeExact(origString);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mallocDoubles {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("mallocDoubles");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern double *mallocDoubles(int count)
     * }
     */
    public static FunctionDescriptor mallocDoubles$descriptor() {
        return mallocDoubles.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern double *mallocDoubles(int count)
     * }
     */
    public static MethodHandle mallocDoubles$handle() {
        return mallocDoubles.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern double *mallocDoubles(int count)
     * }
     */
    public static MemorySegment mallocDoubles$address() {
        return mallocDoubles.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern double *mallocDoubles(int count)
     * }
     */
    public static MemorySegment mallocDoubles(int count) {
        var mh$ = mallocDoubles.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mallocDoubles", count);
            }
            return (MemorySegment)mh$.invokeExact(count);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class freeMemory {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("freeMemory");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void freeMemory(byte []memory)
     * }
     */
    public static FunctionDescriptor freeMemory$descriptor() {
        return freeMemory.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void freeMemory(byte []memory)
     * }
     */
    public static MethodHandle freeMemory$handle() {
        return freeMemory.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void freeMemory(byte []memory)
     * }
     */
    public static MemorySegment freeMemory$address() {
        return freeMemory.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void freeMemory(byte []memory)
     * }
     */
    public static void freeMemory(MemorySegment memory) {
        var mh$ = freeMemory.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("freeMemory", memory);
            }
            mh$.invokeExact(memory);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class readPointer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            library_h.C_POINTER,
            library_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("readPointer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void readPointer(long long *val, long long set)
     * }
     */
    public static FunctionDescriptor readPointer$descriptor() {
        return readPointer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void readPointer(long long *val, long long set)
     * }
     */
    public static MethodHandle readPointer$handle() {
        return readPointer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void readPointer(long long *val, long long set)
     * }
     */
    public static MemorySegment readPointer$address() {
        return readPointer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void readPointer(long long *val, long long set)
     * }
     */
    public static void readPointer(MemorySegment val, long set) {
        var mh$ = readPointer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("readPointer", val, set);
            }
            mh$.invokeExact(val, set);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class getPointer {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_LONG_LONG,
            library_h.C_POINTER,
            library_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("getPointer");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern long long getPointer(long long *val, long long set)
     * }
     */
    public static FunctionDescriptor getPointer$descriptor() {
        return getPointer.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern long long getPointer(long long *val, long long set)
     * }
     */
    public static MethodHandle getPointer$handle() {
        return getPointer.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern long long getPointer(long long *val, long long set)
     * }
     */
    public static MemorySegment getPointer$address() {
        return getPointer.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern long long getPointer(long long *val, long long set)
     * }
     */
    public static long getPointer(MemorySegment val, long set) {
        var mh$ = getPointer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("getPointer", val, set);
            }
            return (long)mh$.invokeExact(val, set);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class fillChars {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_INT,
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("fillChars");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int fillChars(char *fillThis, int sizemax)
     * }
     */
    public static FunctionDescriptor fillChars$descriptor() {
        return fillChars.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int fillChars(char *fillThis, int sizemax)
     * }
     */
    public static MethodHandle fillChars$handle() {
        return fillChars.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int fillChars(char *fillThis, int sizemax)
     * }
     */
    public static MemorySegment fillChars$address() {
        return fillChars.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int fillChars(char *fillThis, int sizemax)
     * }
     */
    public static int fillChars(MemorySegment fillThis, int sizemax) {
        var mh$ = fillChars.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("fillChars", fillThis, sizemax);
            }
            return (int)mh$.invokeExact(fillThis, sizemax);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class passChars {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            library_h.C_INT,
            library_h.C_POINTER,
            library_h.C_INT
        );

        public static final MemorySegment ADDR = library_h.findOrThrow("passChars");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int passChars(char *fillThis, int sizemax)
     * }
     */
    public static FunctionDescriptor passChars$descriptor() {
        return passChars.DESC;
    }
